ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claim_Type__c/Claim_Type__c.object-meta.xml
<CustomObject>
    <description>Used to capture the Primary and Secondary reason for the Claim Case</description>
    <label>Claim Type</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Claim Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>