ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claim_Type__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Related Claim Case</description>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Related Case must be a Residential or Commercial Claim</errorMessage>
        <filterItems>
            <field>Case.RecordType.Name</field>
            <operation>contains</operation>
            <value>Claim</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Claim Types</relationshipLabel>
    <relationshipName>Claim_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>