ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claim_Type__c/fields/Concern__c.field-meta.xml
<CustomField>
    <fullName>Concern__c</fullName>
    <label>Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Claim_Type_Reason</valueSetName>
    </valueSet>
</CustomField>