ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claim_Type__c/fields/Fire_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Fire_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to fire the trigger on the 2020-02-14 to populate claim type fields.</description>
    <label>Fire Trigger</label>
    <type>Checkbox</type>
</CustomField>