ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claim_Type__c/fields/Glass_Organic__c.field-meta.xml
<CustomField>
    <fullName>Glass_Organic__c</fullName>
    <description>Sets the claim type based on the product type. This is used to roll up to the Claim, so that we can choose the right templates.</description>
    <formula>IF(CONTAINS(TEXT(Product_Type__c), &quot;Glass&quot;), &quot;GLASS&quot;, &quot;ORGANIC&quot;)</formula>
    <label>Glass/Organic</label>
    <type>Text</type>
</CustomField>