ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claim_Type__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(none)</fullName>
            </value>
            <value>
                <fullName>A Organic</fullName>
            </value>
            <value>
                <fullName>B Glass</fullName>
            </value>
            <value>
                <fullName>C Lam/Org</fullName>
            </value>
            <value>
                <fullName>D Lam/Glass</fullName>
            </value>
            <value>
                <fullName>E Coated Rolls</fullName>
            </value>
            <value>
                <fullName>F Mod Bit</fullName>
            </value>
            <value>
                <fullName>G Felt</fullName>
            </value>
            <value>
                <fullName>H Asphalt</fullName>
            </value>
            <value>
                <fullName>I Fibrebrd</fullName>
            </value>
            <value>
                <fullName>J Total</fullName>
            </value>
            <value>
                <fullName>K Lock</fullName>
            </value>
            <value>
                <fullName>L ArmourGd</fullName>
            </value>
            <value>
                <fullName>M Protecbrd</fullName>
            </value>
            <value>
                <fullName>N Poly ISO</fullName>
            </value>
            <value>
                <fullName>P Roof-Fast</fullName>
            </value>
            <value>
                <fullName>Q Gold Shield</fullName>
            </value>
            <value>
                <fullName>R Adhs/Ctgs</fullName>
            </value>
            <value>
                <fullName>Z Not IKO</fullName>
            </value>
            <value>
                <fullName>Valley Cap</fullName>
            </value>
            <value>
                <fullName>Panels</fullName>
            </value>
            <value>
                <fullName>Hip &amp; Ridge</fullName>
            </value>
            <value>
                <fullName>Valley</fullName>
            </value>
            <value>
                <fullName>Touch up kit</fullName>
            </value>
            <value>
                <fullName>Screws</fullName>
            </value>
            <value>
                <fullName>Starter w drip</fullName>
            </value>
            <value>
                <fullName>Side</fullName>
            </value>
            <value>
                <fullName>Rake</fullName>
            </value>
            <value>
                <fullName>XD Channel</fullName>
            </value>
            <value>
                <fullName>Debris guard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>