ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claim_Type__c/validationRules/Cannot_Created_if_Claim_Stage_Submited.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Created_if_Claim_Stage_Submited</fullName>
    <active>true</active>
    <description>CLAIMSV2-227 - Claim types can&apos;t be added if the Claim Stage is Submitted</description>
    <errorConditionFormula>ISPICKVAL( Case__r.Claim_Stage__c , &apos;Submitted&apos;)
 &amp;&amp; ISNEW()</errorConditionFormula>
    <errorMessage>You can&apos;t add a Claim Type because the Claim Stage is Submitted.</errorMessage>
</ValidationRule>